# zipenhancer-repro

./: .gitignore  LICENSE  NOTICE  README.md  README.zh-CN.md  pyproject.toml
configs/: official_infer.yaml  zipenhancer_s.yaml
examples/: evaluate_voicebank.sh  infer_dir.sh  infer_file.sh  infer_optimized.sh  quick_infer_official.sh  quick_infer_voicebank.sh  train_smoke.sh
scripts/: download_official.sh  download_voicebank.sh  prepare_voicebank_hf.py
src/zipenhancer_repro/: evaluate.py  infer.py  train.py  verify_backbone.py  verify_official.py
src/zipenhancer_repro/infer_opt/: eval_full.py  infer_lite.py  verify_memory.py  verify_numeric.py
src/zipenhancer_repro/infer_opt/patches/: rel_pos_no_repeat.py  swoosh_fp16_fix.py
src/zipenhancer_repro/losses/: mpsenet_loss.py
src/zipenhancer_repro/models/: backbone.py
src/zipenhancer_repro/optim/: _icefall_optim.py  icefall_optim.py
src/zipenhancer_repro/utils/: metrics.py
tests/: test_imports.py
